# power_markets_pipeline

./: .gitignore  60_DAY_DISCLOSURE_DOCUMENTATION.md  BESS_Market_Analysis_Report.md  BESS_Yearly_Revenue_Analysis.md  Cargo.toml  DEDUPLICATION_STRATEGY.md  LICENSE  README.md  REORGANIZATION_PLAN.md  analyze_bess_as_revenue_structure.py  analyze_bess_results.py  calculate_bess_complete_revenues_corrected.py  final_bess_revenue_analysis.py  inspect_all_disclosure_directories.py  inspect_disclosure_data.py  quick_as_revenue_check.py  reorganize_data.sh  run_bess_complete_analysis.py  run_bess_complete_analysis_with_logging.py  run_bess_disclosure_analysis.sh  run_bess_sample_analysis.py
bess_complete_analysis/: BESS_ECHARTS_IMPLEMENTATION.md  BESS_LEADERBOARD_APP_DESIGN.md  BESS_MARKET_INDEX_METHODOLOGY.md  BESS_REVENUE_CALCULATION_ALGORITHM.md  BESS_TIERED_INDEX_SYSTEM.md  BESS_VISUALIZATION_EXAMPLES.md  FINAL_BESS_REVENUE_SUMMARY.md
src/: ancillary_processor.rs  annual_processor.rs  bess_analyzer.rs  bess_complete_analyzer.rs  bess_comprehensive_calculator.rs  bess_disclosure_analyzer.rs  bess_full_disclosure_analyzer.rs  bess_market_report.rs  bess_parquet_calculator.rs  bess_revenue_calculator.rs  bess_visualization.rs  csv_extractor.rs  (+13 more)
tbx_calculator/: Cargo.toml  README.md  RUN_TBX_EXAMPLE.md  TBX_DESIGN.md  TBX_IMPLEMENTATION_SUMMARY.md  check_schema.py
tbx_calculator/benches/: tbx_benchmarks.rs
tbx_calculator/examples/: simple_tbx.rs
tbx_calculator/src/: blended_optimizer.rs  calculator.rs  data_loader.rs  lib.rs  main.rs  models.rs  settlement_mapper.rs
