[package]
name = "rt_rust_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rayon = "1.8"
glob = "0.3"
anyhow = "1.0"
indicatif = "0.17"
num_cpus = "1.16"
polars = { version = "0.33", features = ["lazy", "csv", "parquet", "ipc", "temporal"] }
zip = "0.6"
regex = "1.10"
plotters = "0.3"
walkdir = "2.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3