[package]
name = "tbx_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43", features = ["lazy", "parquet", "csv", "temporal", "strings", "json", "pivot"] }
arrow = { version = "54", features = ["prettyprint"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tbx_benchmarks"
harness = false